<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Write Up stuff here. You can call these up in the Main.XML file -->

    <string name="app_name">InstaBuildings</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="new_post">New Post</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="sendpost">Post</string>

    <!-- Nav Drawer Menu Items //The names -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Your Projects</item>
        <item>Starred Projects</item>
        <item>Trending Near You</item>
    </string-array>

    <!-- Nav Drawer List Item Icons //The Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="action_settings">Settings</string>

    <!-- New Activity Names -->
    <string name="title_activity_new_post">New Post</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_accounts">Account</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">Test</string>
    
    <!-- Servlet Page -->
	<string name="button">Show Your Projects</string>

</resources>