<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<!-- Insert items and images which you can call from the Strings.XML file -->
    
     <item
        android:id="@+id/notification_bulb"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_warning"
        android:title="@string/notifications"/>
    
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"/>
    
    <item
        android:id="@+id/new_post"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_picture"
        android:title="@string/new_post"/>
             
    <item
        android:id="@+id/account"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/account"/>
    
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/settings"/>
    
    

</menu>
